--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
       "request": "launch",
       "program": "${file}",
       "console": "integratedTerminal",
-      "args": ["<", "${workspaceRoot}/stdin"]
+      "args": ["<", "${workspaceRoot}/.vscode/stdin"]
     }
   ]
 }
