--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,8 +1,11 @@
 {
-  "python.testing.pytestArgs": ["tests"],
+  "python.testing.pytestArgs": ["."],
   "python.testing.unittestEnabled": false,
   "python.testing.pytestEnabled": true,
+  "editor.tabSize": 4,
   "files.exclude": {
-    ".pytest_cache/**": true
+    "**/**/__pycache__": true,
+    "**/**/.pytest_cache": true,
+    "**/**/__init__.py": true
   }
 }
